# Gitlab-Proposal

./: (old) Final version - Extracting URLS and Generating APA Citations From Webpages.py  Final version - Extracting URLS and Generating APA Citations From Webpages.py  NEW FINAL - Walktrough Final Python Project github.py  README.md  extracted_data.csv  pytesting.py  requirements.txt  version 1 extract info from website - SS project 24.py
mypackage/: pyproject.toml  setup.py
mypackage/output files/: extracted_data.csv
mypackage/web_citation_extractor/: __init__.py  new_final_walkthrough_final_python_project.py
web_citation_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
z. old version of project in this folder/: (old) Final version - Extracting URLS and Generating APA Citations From Webpages.py  Version 2 - use of selenium for extracting.py  Version 3-list of urls.py
