#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
Created on Fri Jan 31 17:49:14 2025

@author: isisboelens
"""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-extractor"
version = "0.1.0"
description = "A Python package to extract URLs and generate APA citations from webpages"
authors = [
    { name = "Isis Boelens", email = "youremail@example.com" },
]
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.9.3",
    "selenium>=3.141.0",
    "requests>=2.24.0",
]
keywords = ["citation", "APA", "web scraping", "selenium"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
