#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
Created on Fri Jan 31 17:49:14 2025

@author: isisboelens
"""

[tool.poetry]
name = "web_citation_extractor"
version = "0.1.0"
description = "A tool for extracting citations from web pages."
authors = ["Isis Boelens <ifboelens@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

]
